only DMRG.ipynb chnaged

--- a/examples/DMRGtests.ipynb
+++ b/examples/DMRGtests.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -202,18 +211,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'mps' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-b6d32b2525d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcanmps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcanonize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'hello'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#print(canmps)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmps2\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcanmps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoMPS\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'bla'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'mps' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0.36888395 -0.92947546]\n",
+      "  [-0.92947546 -0.36888395]]]\n",
+      "[[[ 0.36888395 -0.92947546]\n",
+      "  [-0.92947546 -0.36888395]]]\n",
+      "0\n",
+      "0\n",
+      "10\n",
+      "10\n"
      ]
     }
    ],
@@ -222,9 +234,15 @@
     "#print(canmps)\n",
     "mps2=canmps.toMPS(name='bla')\n",
     "\n",
-    "print(mps.dtype)\n",
-    "print(canmps.dtype)\n",
-    "print(np.random.rand(1).dtype)"
+    "print(canmps[1])\n",
+    "print(canmps.Gamma[0])\n",
+    "canmps[1]=0\n",
+    "print(canmps[1])\n",
+    "print(canmps.Gamma[0])\n",
+    "\n",
+    "canmps.Gamma[0]=10\n",
+    "print(canmps[1])\n",
+    "print(canmps.Gamma[0])"
    ]
   },
   {
